creando funcion para guardar

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sakuraapi": "json-server src/app/assets/data/db.json --port 3010"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
