--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
     "axios": "^1.6.5",
     "json-server": "^1.0.0-alpha.22",
